--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,3 +18,5 @@
       <div class="menu-item"><a href="/users">Users</a></div>
       <div class="menu-item"><a href="/">Login</a></div>
     </div>
+  </body>
+</html>
